Setup remaining of the backend tests, fixed controllers to match openApi and changes OpenAPI were required. Setup Github actions (Fingers Crossed)
